--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -1,24 +1,32 @@
 require 'rubygems'
 require 'bundler/setup'
-require 'rdoc/task'
+require 'yard'
+require 'yard/rake/yardoc_task'
 
-task :default => [:test]
+task :default => ['test:all']
 
-RDoc::Task.new do |rdoc|
-  #rdoc.main = "README.md"
-  #rdoc.rdoc_files.include("README.md", "lib/**/*.rb")
-  rdoc.rdoc_files.include("lib/**/*.rb")
+namespace :doc do
+  root = File.dirname(__FILE__)
+  dest = File.join(root, '.', 'doc')
+
+  desc 'Generate documentation'
+  YARD::Rake::YardocTask.new(:yard) do |yt|
+    # Default to just the lib directory, uncomment this if we want tests too
+    # yt.files   = Dir.glob(File.join(root, '**', '*.rb'))
+    yt.options = ['--output-dir', dest, '--readme', File.join(root, 'readme.md'), '--files', File.join(root, 'guide.md')]
+  end
 end
 
-desc "Run a specific regression file on the converted tinymud code (rake :test_script_converted name=foo])"
-task :test_script => [] do |t|
-  ENV['TEST_TYPE']='CONVERTED'
-  system "ruby ./test/run_command.rb #{ENV['name']}"
-end
+namespace :test do
+  desc "Run a specific regression file on the converted tinymud code (rake :test_script_converted name=foo])"
+  task :test_script => [] do |t|
+    ENV['TEST_TYPE']='CONVERTED'
+    system "ruby ./test/run_command.rb #{ENV['name']}"
+  end
 
-desc "Run all tests on the current conversion code"
-task :test => [] do |t|
-  ENV['TEST_TYPE']='CONVERTED'
-  system "ruby ./test/test.rb"
+  desc "Run all tests on the current conversion code"
+  task :all => [] do |t|
+    ENV['TEST_TYPE']='CONVERTED'
+    system "ruby ./test/test.rb"
+  end
 end
-
