--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -3,4 +3,6 @@ source 'http://rubygems.org'
 gem 'mocha', '~> 0.10.4'
 gem 'rake', '~> 0.9.2.2'
 gem 'rdoc', '~> 3.12'
+gem 'redcarpet'
+gem 'yard'
 
