--- a/ruby/lib/phrases.yml
+++ b/ruby/lib/phrases.yml
@@ -7,6 +7,9 @@
 # we have missed the odd phrase, especially flags. Any missed conversions will show up
 # quickly as the tests are comprehensive.
 #
+# Another note: We have not put commands into this system, its trivial to-do though
+# see game.rb for the complete list
+#
 
 'welcome-message'           : "Welcome to TinyMUD\nTo connect to your existing character, enter \"connect name password\"\nTo create a new character, enter \"create name password\"\nUse the news command to get up-to-date news on program changes.\n\nYou can disconnect using the QUIT command, which must be capitalized as shown.\n\nUse the WHO command to find out who is currently active.\n\n"
 'leave-message'             : "\n***Disconnected***\n"
