--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,8 +1,8 @@
 source 'http://rubygems.org'
 
-gem 'mocha', '~> 0.10.4'
-gem 'rake', '~> 0.9.2.2'
-gem 'rdoc', '~> 3.12'
+gem 'mocha'
+gem 'rake'
+gem 'rdoc'
 gem 'redcarpet'
 gem 'yard'
-
+gem 'diff-lcs'
