--- a/ruby/lib/phrases.yml
+++ b/ruby/lib/phrases.yml
@@ -11,6 +11,17 @@
 # see game.rb for the complete list
 #
 
+# Commands (not exhaustive - see above comments)
+################################################
+
+'quit-command'              : "QUIT"
+'who-command'               : "WHO"
+'prefix-command'            : "OUTPUTPREFIX"
+'suffix-command'            : "OUTPUTSUFFIX"
+
+# General Messages
+##################
+
 'welcome-message'           : "Welcome to TinyMUD\nTo connect to your existing character, enter \"connect name password\"\nTo create a new character, enter \"create name password\"\nUse the news command to get up-to-date news on program changes.\n\nYou can disconnect using the QUIT command, which must be capitalized as shown.\n\nUse the WHO command to find out who is currently active.\n\n"
 'leave-message'             : "\n***Disconnected***\n"
 'connect-fail'              : "Either that player does not exist, or has a different password.\n"
