some tidying of the drunk guy bot

--- a/bots/drunkguy.yml
+++ b/bots/drunkguy.yml
@@ -5,6 +5,26 @@
 - "%s, what kind of name is that!"
 - "what are you looking at?"
 - "%s, what a pretty name"
+- "I like naked people."
+- "I'm drunk, he he"
+- "hic"
+- "burp"
+- "I knew a fish called %s"
+- "drink"
+- "got some cheese"
+:before_sleep:
+- "swigs from bottle"
+- "takes a drink"
+- "sips from bottle"
+- "falls asleep"
+- "dozes off"
+- "slurps from bottle"
+- "rips label off bottle"
+- "stares into space"
+- "rubs bottle"
+- "laughs at wall"
+- "scratches crotch."
+- "sways"
 :bottle_pre:
 - "ooopss buttery fingers"
 - "ooopssyy"
@@ -17,6 +37,10 @@
 - "wash oversh there?"
 - "bye, gotta go"
 - "see you"
+:bottle_osucc:
+- "swaggers and picks up a bottle."
+- "picks up a bottle."
+- "fumbles about picking up a bottle."
 :toilet:
 - "ahhhhhhhh - That's better, ooops, missed."
 - "weeeeeeee - ooops"
