cleaned up drunk guy bot

--- a/bots/drunkguy.yml
+++ b/bots/drunkguy.yml
@@ -12,6 +12,10 @@
 - "I knew a fish called %s"
 - "drink"
 - "got some cheese"
+- "I'm unhappy"
+- "party!"
+- "%s!"
+- "do I know you?"
 :before_sleep:
 - "swigs from bottle"
 - "takes a drink"
@@ -25,22 +29,33 @@
 - "laughs at wall"
 - "scratches crotch."
 - "sways"
+- "takes a drink"
+- "smiles"
+- "sticks tongue out"
 :bottle_pre:
 - "ooopss buttery fingers"
 - "ooopssyy"
 - "oh no"
+- "damn"
 :bottle_post:
-- "no escaping me"
+- "no escaping"
 - "gotcha"
+- "got you"
+- "he he"
 :leaving: 
 - "need more booze..."
+- "flump"
 - "wash oversh there?"
-- "bye, gotta go"
+- "bye"
 - "see you"
 :bottle_osucc:
 - "swaggers and picks up a bottle."
 - "picks up a bottle."
+- "grasps bottle"
 - "fumbles about picking up a bottle."
 :toilet:
-- "ahhhhhhhh - That's better, ooops, missed."
-- "weeeeeeee - ooops"
+- "ahhhhhhhh, ooops, missed."
+- "weeeeeeee"
+- "come here often"
+- "oops"
+- "hello mr snake"
