--- a/bots/drunkguy.yml
+++ b/bots/drunkguy.yml
@@ -16,6 +16,8 @@
 - "party!"
 - "%s!"
 - "do I know you?"
+- "hello %s"
+- "she walked out on me, can you believe that?"
 :before_sleep:
 - "swigs from bottle"
 - "takes a drink"
@@ -32,8 +34,10 @@
 - "takes a drink"
 - "smiles"
 - "sticks tongue out"
+- "nods"
+- "hums a tune"
 :bottle_pre:
-- "ooopss buttery fingers"
+- "ooopss butter fingers"
 - "ooopssyy"
 - "oh no"
 - "damn"
@@ -45,7 +49,7 @@
 :leaving: 
 - "need more booze..."
 - "flump"
-- "wash oversh there?"
+- "whats over there?"
 - "bye"
 - "see you"
 :bottle_osucc:
